# AIWriteX

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
docs/: license.txt
knowledge/templates/健康养生/: t1.html
knowledge/templates/其他/: template1.html  template10.html  template2.html  template3.html  template4.html  template5.html  template6.html  template7.html  template8.html  template9.html
knowledge/templates/娱乐八卦/: t1.html
knowledge/templates/尚未适配/: template13.html  template15.html  template16.html  template17.html  template18.html  template19-deepseek0528.html  template21.html  template22.html  template23.html  template25.html  template26.html
knowledge/templates/情感心理/: t1.html  散文连环画.html
knowledge/templates/教育学习/: t1.html
knowledge/templates/新闻时事/: t1.html
knowledge/templates/时尚生活/: t1.html
knowledge/templates/科技数码/: t1.html
knowledge/templates/美食旅行/: t1.html  t2_0.html  t2_1.html  t2_2.html
knowledge/templates/职场发展/: t1.html
knowledge/templates/财经投资/: t1.html
src/ai_write_x/: crew_main.py  version.py
src/ai_write_x/adapters/: platform_adapters.py
src/ai_write_x/config/: aiforge.toml  config.py  config.yaml
src/ai_write_x/core/: agent_factory.py  base_framework.py  content_generation.py  monitoring.py  system_init.py  tool_registry.py  unified_workflow.py
src/ai_write_x/creative/: dimensional_engine.py
src/ai_write_x/license/: __init__.py
src/ai_write_x/tools/: custom_tool.py  hotnews.py  (+2 more)
tests/: test_aipy_search.py  test_hotnews.py
(+71 files in other folders)
